--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -113,7 +113,9 @@ jobs:
           python-version: 3.7
       # Step 3
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run:
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       # Step 4
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
