--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -114,7 +114,7 @@ jobs:
       # Step 3
       - name: Install dependencies
         run:
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install -r requirements.txt
       # Step 4
       - name: Configure AWS credentials
