--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -107,10 +107,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       # Step 2
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v2
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.7
+          python-version: "3.10"
       # Step 3
       - name: Install dependencies
         run:
