--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
-aniso8601==9.0.1
-blinker==1.7.0
-click==8.1.7
-flask==3.0.0
-Flask-RESTful==0.3.10
-flask-sqlalchemy==3.1.1
-importlib-metadata==7.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-mysql-connector-python==8.2.0
-mysqlclient==2.2.1
-protobuf==4.21.12
-pytz==2023.3.post1
-six==1.16.0
-SQLAlchemy==2.0.23
-typing-extensions==4.9.0
-werkzeug==3.0.1
-zipp==3.17.0
+fastapi==0.104.1
+passlib==1.7.4
+pydantic==2.5.2
+PyMySQL==1.0.2
+python_jose==3.3.0
+uvicorn==0.20.0
+jinja2==3.1.2
+python-multipart==0.0.6
+pytest==7.4.0
